--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -1132,6 +1132,9 @@ depends_on = [ "proposal-trait", "executor-dao", "age000-governance-token", "age
 path = "alex-dao-proposals/contracts/agp099.clar"
 depends_on = [ "proposal-trait", "executor-dao", "age000-governance-token", "age009-token-lock" ]
 
+[contracts.agp101]
+path = "alex-dao-proposals/contracts/agp101.clar"
+
 
 
 
